[package]
name = "rexrocksdb"
description = "Fork of rust wrapper for Facebook's RocksDB embeddable database."
version = "0.3.0"
authors = ["Andrey Vesnovaty <andrey.vesnovaty@gmail.com>"]
license = "Apache-2.0"
keywords = ["database", "embedded", "LSM-tree", "persistence"]
homepage = "https://github.com/andrey-ve/rexrocksdb"
exclude = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "tests/**/*",
]

[features]
default = []
valgrind = []
portable = ["librocksdb_sys/portable"]
sse = ["librocksdb_sys/sse"]

[[test]]
name = "test"
path = "tests/test.rs"

[dependencies]
libc = "0.2.11"
tempdir = "0.3.4"
crc = "1.2"

[dependencies.librocksdb_sys]
path = "librocksdb_sys"
version = "0.1"

[dev-dependencies]
byteorder = "1.0.0"
rand = "0.3"
