[package]
name = "librocksdb_sys"
description = "Fork of librocksdb_sys wrapper for Facebook's RocksDB embeddable database."
version = "0.1.1"
authors = ["Andrey Vesnovaty <andrey.vesnovaty@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/andrey-ve/rexrocksdb"
repository = "https://github.com/andrey-ve/rexrocksdb"
build = "build.rs"
links = "rocksdb"

[dependencies]
bzip2-sys = "0.1"
libc = "0.2.11"
tempdir = "0.3"
libz-sys = { version = "1.0", features = ["static"] }
serde = { version = "1.0", features = ["derive"] }
zstd-sys = "1.3"

[features]
default = []
# portable doesn't require static link, though it's meaningless
# when not using with static-link right now in this crate.
portable = []
sse = []

[build-dependencies]
cc = "1.0.3"
cmake = "0.1"
